# 352flights

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
app/: error.tsx  global-error.tsx  globals.css  home.css  layout.tsx  ops.css  page.tsx  preferences.css  robots.ts  sitemap.ts
components/: active-routes-board.tsx  campaign-launcher.tsx  destination-photo-manager.tsx  digest-automation-panel.tsx  email-campaigns-board.tsx  landmark-photo.tsx  language-selector.tsx  local-pattern-discovery-status.tsx  local-scanner-status.tsx  newsletter-form.tsx  ops-health-never-snapshot-card.tsx  ops-review-queue.tsx  ops-scanner-status-hub.tsx  ops-subnav.tsx  preferences-manager.tsx  preferences-topbar-actions.tsx  preferences-typeform-concept.tsx  price-intelligence-board.tsx  public-deals-explorer.tsx  public-deals-select.tsx  public-destination-visual.tsx  recent-snapshots-panel.tsx  scroll-to-top-button.tsx  site-chrome.tsx  theme-toggle.tsx  v2-alerts.tsx  v2-bottom-sections.tsx  v2-footer.tsx  v2-landing.tsx  v2-legal.tsx  v2-outro.tsx  v2-status.tsx  vps-scanner-control-panel.tsx  web-activity-log.tsx
data/: lux-routes.json
docs/: cheap-online-setup.md
launchd/: com.luxcheapflights.pattern-discovery.plist  com.luxcheapflights.scanner.plist
lib/: active-routes.ts  airline-summary.ts  client-activity-log.ts  content.ts  destination-content.ts  destination-photo-storage.ts  env.ts  (+22 more)
scanner/: pyproject.toml
scanner/luxflight_scanner/: __init__.py  config.py  main.py  models.py  scanner.py  storage.py  sync.py
(+61 files in other folders)
