[project]
name = "luxflight-scanner"
version = "0.1.0"
description = "Scanner for Luxembourg flight deals powered by fli"
requires-python = ">=3.11"
dependencies = [
  "flights>=0.7.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1"
]

[project.scripts]
luxflight-scan = "luxflight_scanner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luxflight_scanner"]

